Message Board link updated

--- a/view/index.html
+++ b/view/index.html
@@ -156,7 +156,7 @@
                                     <img id="project-pic" src="../pictures/Message-board.jpg"  alt="Agora Forum"/>                                
                                 </div>  <hr><div class="title"> Agora Forum</div>
                                 <div id="filter">
-                                    <a href="https://message-board.zorrey.repl.co/" target="_blank">                    
+                                    <a href="https://message-board-zory.glitch.me/" target="_blank">                    
                                     <hr> 
                                     <h4>JavaScript <br> Agora Forum</h4>
                                     <p>  This full stack JavaScript app is built with Node.js, Express.js, Mongoose-MongoDB database</p> 
