Sudoku link updated

--- a/view/index.html
+++ b/view/index.html
@@ -143,7 +143,7 @@
                                     <img id="project-pic" src="../pictures/sudoku copy.jpg"  alt="Sudoku"/>                                                                  
                                 </div>  <hr> <div class="title">Sudoku Solver</div> 
                                 <div id="filter">
-                                    <a href="https://sudoku.zorrey.repl.co" target="_blank">                    
+                                    <a href="https://sudoku-zory-.glitch.me/" target="_blank">                    
                                         <hr> 
                                         <h4>JavaScript <br> Sudoku Solver & Generator</h4>
                                         <p> This full stack JavaScript app is built with Node.js, Express.js and React.</p> 
