project links updated

--- a/view/index.html
+++ b/view/index.html
@@ -219,7 +219,7 @@
                             </div>                                 
                                 <hr><div class="title">Exercise tracker</div>
                             <div id="filter">
-                                <a href="https://exercisetracker.zorrey.repl.co" target="_blank">                    
+                                <a href="" target="_blank">                    
                                 <hr> 
                                 <h4>Exercise tracker</h4>
                                 <p> This full stack JavaScript app is built with Node.js, Express.js,Mongoose-MongoDB database and tested with Mocha and Chai.</p> 
@@ -274,7 +274,7 @@
                                 
                                 <hr> <div class="title">Metric/Imperial Converter</div>
                             <div id="filter">
-                                <a href="https://boilerplate-project-metricimpconverter.zorrey.repl.co/" target="_blank">                    
+                                <a href="https://project-metricimpconverter-zory.glitch.me/" target="_blank">                    
                                 <hr> 
                                 <h4>Metric/Imperial Converter</h4>
                                 
@@ -289,7 +289,7 @@
                             
                             <hr> <div class="title">American / British English Translator</div>
                         <div id="filter">
-                            <a href="https://American-British-Translator.zorrey.repl.co" target="_blank">                    
+                            <a href="" target="_blank">                    
                             <hr> 
                             <h4>Translator</h4>
                             <p> This full stack JavaScript app is built with Node.js, Express.js and tested with Mocha and Chai.</p> 
@@ -537,7 +537,7 @@
                                         
                                         <hr><div class="title">Header Parser</div> 
                                     <div id="filter">
-                                        <a href="https://boilerplate-project-headerparser.zorrey.repl.co/" target="_blank">                    
+                                        <a href="https://project-headerparser-zory.glitch.me/" target="_blank">                    
                                             <hr> 
                                         <h4>Header Parser Microservice</h4>
                                         <p> This full stack JavaScript app is built with Node.js, Express.js and MongoDB database.</p> 
@@ -551,7 +551,7 @@
                                     
                                         <hr><div class="title">URL Shortener</div>
                                     <div id="filter">
-                                        <a href="https://boilerplate-project-urlshortener.zorrey.repl.co/" target="_blank">                    
+                                        <a href="" target="_blank">                    
                                         <hr> 
                                         <h4>URL Shortener Microservice</h4>
                                         <p> This full stack JavaScript app is built with Node.js, Express.js and Mongoose-MongoDB database.</p> 
