project-translator link updated

--- a/view/index.html
+++ b/view/index.html
@@ -289,7 +289,7 @@
                             
                             <hr> <div class="title">American / British English Translator</div>
                         <div id="filter">
-                            <a href="" target="_blank">                    
+                            <a href="https://american-british-translator-zory.glitch.me/" target="_blank">                    
                             <hr> 
                             <h4>Translator</h4>
                             <p> This full stack JavaScript app is built with Node.js, Express.js and tested with Mocha and Chai.</p> 
