--- a/view/index.html
+++ b/view/index.html
@@ -219,7 +219,7 @@
                             </div>                                 
                                 <hr><div class="title">Exercise tracker</div>
                             <div id="filter">
-                                <a href="" target="_blank">                    
+                                <a href="https://exercise-tracker-zory.glitch.me/" target="_blank">                    
                                 <hr> 
                                 <h4>Exercise tracker</h4>
                                 <p> This full stack JavaScript app is built with Node.js, Express.js,Mongoose-MongoDB database and tested with Mocha and Chai.</p> 
