new project link

--- a/view/index.html
+++ b/view/index.html
@@ -148,7 +148,7 @@
                         <hr>
                         <div class="title">Sudoku Solver</div>
                         <div id="filter">
-                            <a href="https://sudoku-zory-.glitch.me/" target="_blank">
+                            <a href="https://sudoku-bp7i.onrender.com" target="_blank">
                                 <hr>
                                 <h4>JavaScript <br> Sudoku Solver & Generator</h4>
                                 <p> This full stack JavaScript app is built with Node.js, Express.js and React.</p>
@@ -163,7 +163,7 @@
                         <hr>
                         <div class="title"> Agora Forum</div>
                         <div id="filter">
-                            <a href="https://message-board-zory.glitch.me/" target="_blank">
+                            <a href="https://message-board-bp4x.onrender.com" target="_blank">
                                 <hr>
                                 <h4>JavaScript <br> Agora Forum</h4>
                                 <p> This full stack JavaScript app is built with Node.js, Express.js, Mongoose-MongoDB
@@ -203,7 +203,7 @@
                         <hr>
                         <div class="title">Pathfinder </div>
                         <div id="filter">
-                            <a href="https://pathfinder-zory-.glitch.me/" target="_blank">
+                            <a href="https://pathfinding-8oaj.onrender.com" target="_blank">
                                 <hr>
                                 <h4>JavaScript <br> Pathfinder</h4>
                                 <p> This JavaScript app is built with React</p>
@@ -272,12 +272,12 @@
                 <div id="p-card">
                     <div class="project-tile a">
                         <div class="window a">
-                            <img id="project-pic" src="../pictures/Issue Tracker.jpg" alt="Issue Tracker""/>  
+                            <img id="project-pic" src="../pictures/Issue Tracker.jpg" alt="Issue Tracker" />  
                             </div>                            
                             <hr> <div class=" title">Issue Tracker
                         </div>
                         <div id="filter">
-                            <a href="https://issue-tracker-zory.glitch.me/" target="_blank">
+                            <a href="https://ec084fce-6411-41fc-a7e6-e82f93f5c6bf-00-woabr2qixbue.picard.replit.dev/" target="_blank">
                                 <hr>
                                 <h4>Issue Tracker</h4>
                                 <p> This full stack JavaScript app is built with Node.js, Express.js, MongoDB Database
