--- a/view/index.html
+++ b/view/index.html
@@ -213,14 +213,14 @@
                     </div>
 
                     <div class="column">
-                        <div class="project-tile b">
+                        <div class="project-tile a">
                             <div class="window">
                                 <img id="project-pic" src="../pictures/Z-library.jpg" alt="Zory's Library" />
                             </div>
                             <hr>
                             <div class="title">Zory's Library </div>
                             <div id="filter">
-                                <a href="https://zory-s-library.glitch.me/" target="_blank">
+                                <a href="https://library-9j3e.onrender.com/" target="_blank">
                                     <hr>
                                     <h4>JavaScript <br> Zory's Library</h4>
                                     <p> This full stack JavaScript app is built with Node.js, Express.js,
@@ -229,7 +229,8 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="project-tile b">
+
+                        <!--    <div class="project-tile b">
                             <div class="window">
                                 <img id="project-pic" src="../pictures/Ex Tracker.jpg" alt="Exercise tracker" />
                             </div>
@@ -244,7 +245,7 @@
                                     <hr>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
@@ -272,12 +273,14 @@
                 <div id="p-card">
                     <div class="project-tile a">
                         <div class="window a">
-                            <img id="project-pic" src="../pictures/Issue Tracker.jpg" alt="Issue Tracker" />  
-                            </div>                            
-                            <hr> <div class=" title">Issue Tracker
+                            <img id="project-pic" src="../pictures/Issue Tracker.jpg" alt="Issue Tracker" />
+                        </div>
+                        <hr>
+                        <div class=" title">Issue Tracker
                         </div>
                         <div id="filter">
-                            <a href="https://ec084fce-6411-41fc-a7e6-e82f93f5c6bf-00-woabr2qixbue.picard.replit.dev/" target="_blank">
+                            <a href="https://ec084fce-6411-41fc-a7e6-e82f93f5c6bf-00-woabr2qixbue.picard.replit.dev/"
+                                target="_blank">
                                 <hr>
                                 <h4>Issue Tracker</h4>
                                 <p> This full stack JavaScript app is built with Node.js, Express.js, MongoDB Database
