--- a/view/index.html
+++ b/view/index.html
@@ -141,27 +141,7 @@
                     <li><a class="btn btn-light" id="next" onclick="openPCard('card-2', 'card-1')">NEXT</a></li>
                 </ul>
                 <div id="p-card">
-                    <div class="project-tile a">
-                        <div class="window">
-                            <img id="project-pic" src="../pictures/sudoku copy.jpg" alt="Sudoku" />
-                        </div>
-                        <hr>
-                        <div class="title">Sudoku Solver</div>
-                        <div id="filter">
-                            <a href="https://sudoku-bp7i.onrender.com" target="_blank">
-                                <hr>
-                                <h4>JavaScript <br> Sudoku Solver & Generator</h4>
-                                <p> Full-stack Sudoku solving application built with React and Node.js.
-                                    Allows users to input or generate puzzles and generates solutions using efficient
-                                    algorithmic logic.
-                                    Demonstrates front-end interactivity with React and backend problem-solving
-                                    capabilities, showcasing skills in algorithm design,
-                                    API integration, and user-friendly UI development.
-                                </p>
-                                <hr>
-                            </a>
-                        </div>
-                    </div>
+
                     <div class="project-tile a">
                         <div class="window">
                             <img id="project-pic" src="../pictures/Message-board.jpg" alt="Agora Forum" />
@@ -183,6 +163,29 @@
                             </a>
                         </div>
                     </div>
+                    <div class="project-tile a">
+                        <div class="window">
+                            <img id="project-pic" src="../pictures/Issue Tracker.jpg" alt="Issue Tracker" />
+                        </div>
+                        <hr>
+                        <div class=" title">Issue Tracker
+                        </div>
+                        <div id="filter">
+                            <a href="https://issuetracker-zory.onrender.com/" target="_blank">
+                                <hr>
+                                <h4>Issue Tracker</h4>
+                                <p> A full-stack JavaScript application using React (with Vite) for the frontend and
+                                    Node.js with MongoDB for the backend.
+                                    The backend exposes RESTful API routes and also serves the statically built React
+                                    frontend.
+                                    During deployment on Render, the React app is built automatically using a
+                                    postinstall script, enabling seamless full-stack deployment from a single service.
+                                </p>
+                                <hr>
+                            </a>
+                        </div>
+                    </div>
+              
                 </div>
 
                 <div class="pr-list">
@@ -227,27 +230,28 @@
                             </a>
                         </div>
                     </div>
-
-                    <div class="column">
-                        <div class="project-tile a">
-                            <div class="window">
-                                <img id="project-pic" src="../pictures/Z-library.jpg" alt="Zory's Library" />
-                            </div>
-                            <hr>
-                            <div class="title">Zory's Library </div>
-                            <div id="filter">
-                                <a href="https://library-9j3e.onrender.com/" target="_blank">
-                                    <hr>
-                                    <h4>JavaScript <br> Zory's Library</h4>
-                                    <p> 
-                                        Full-stack personal library management system built with Node.js, Express, MongoDB, and React. 
-                                        Allows users to add, edit, and delete book entries through a RESTful API and a responsive React frontend. 
-                                        Features dynamic search and data validation, showcasing CRUD operations, database integration, and modern UI development.
-                                    </p>
-                                    <hr>
-                                </a>
-                            </div>
+                    <div class="project-tile a">
+                        <div class="window">
+                            <img id="project-pic" src="../pictures/sudoku copy.jpg" alt="Sudoku" />
                         </div>
+                        <hr>
+                        <div class="title">Sudoku Solver</div>
+                        <div id="filter">
+                            <a href="https://sudoku-bp7i.onrender.com" target="_blank">
+                                <hr>
+                                <h4>JavaScript <br> Sudoku Solver & Generator</h4>
+                                <p> Full-stack Sudoku solving application built with React and Node.js.
+                                    Allows users to input or generate puzzles and generates solutions using efficient
+                                    algorithmic logic.
+                                    Demonstrates front-end interactivity with React and backend problem-solving
+                                    capabilities, showcasing skills in algorithm design,
+                                    API integration, and user-friendly UI development.
+                                </p>
+                                <hr>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="column">                    
 
                         <!--    <div class="project-tile b">
                             <div class="window">
@@ -291,24 +295,28 @@
                 </ul>
                 <div id="p-card">
                     <div class="project-tile a">
-                        <div class="window a">
-                            <img id="project-pic" src="../pictures/Issue Tracker.jpg" alt="Issue Tracker" />
+                        <div class="window">
+                            <img id="project-pic" src="../pictures/Z-library.jpg" alt="Zory's Library" />
                         </div>
                         <hr>
-                        <div class=" title">Issue Tracker
-                        </div>
+                        <div class="title">Zory's Library </div>
                         <div id="filter">
-                            <a href="https://issuetracker-zory.onrender.com/" target="_blank">
+                            <a href="https://library-9j3e.onrender.com/" target="_blank">
                                 <hr>
-                                <h4>Issue Tracker</h4>
-                                <p> A full-stack JavaScript application using React (with Vite) for the frontend and Node.js with MongoDB for the backend. 
-                                    The backend exposes RESTful API routes and also serves the statically built React frontend. 
-                                    During deployment on Render, the React app is built automatically using a postinstall script, 
-                                    enabling seamless full-stack deployment from a single service.</p>
+                                <h4>JavaScript <br> Zory's Library</h4>
+                                <p>
+                                    Full-stack personal library management system built with Node.js, Express,
+                                    MongoDB, and React.
+                                    Allows users to add, edit, and delete book entries through a RESTful API and a
+                                    responsive React frontend.
+                                    Features dynamic search and data validation, showcasing CRUD operations,
+                                    database integration, and modern UI development.
+                                </p>
                                 <hr>
                             </a>
                         </div>
                     </div>
+              
 
                     <div class="column">
                         <div class="project-tile b">
