--- a/public/projects.css
+++ b/public/projects.css
@@ -11,6 +11,7 @@
     margin: 0;
     padding: 0.4em;
     font-size: 0.8em;
+    text-align: center;
 }
 .space{
     margin-bottom: 40px;
@@ -19,7 +20,7 @@
     background-color: white;
     color: black;
 } */
- .canvas{
+.canvas{
     color: black; 
 }
 #projects{     
@@ -145,8 +146,7 @@
    
 }
 .project-tile:hover #filter{
- height: 100%;
-   
+ height: 100%;   
 }
 .btn.btn-light{
 padding: 3px;
@@ -160,8 +160,7 @@ hr{
     justify-content:center;
     cursor: pointer;
     color:white;
-    align-items: center;
-   
+    align-items: center;   
 }
 .next li{
     display: inline-block;
@@ -185,8 +184,6 @@ hr{
     animation: fadeIn 1s;
     opacity: 1;
     display:block ;
-    
-
 }
 .card-1.active-c.turnOff{
     animation:fadeOut 0.5s;
